Fix sponsor and testimonial secition on mobile view

--- a/css/main.css
+++ b/css/main.css
@@ -4869,7 +4869,7 @@ img {
 
 .testimonial-block-two .inner-box {
 	position: relative;
-	height: 350px;
+	height: 360px;
 	border-radius: 15px;
 	padding: 35px 45px 35px;
 	background-color: #ffffff;
